apps/minbird-nokduro-v2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minbird-nokduro-v2
  namespace: haenu
  labels:
    app: minbird-nokduro-v2
spec:
  selector:
    matchLabels:
      app: minbird-nokduro-v2
  template:
    metadata:
      labels:
        app: minbird-nokduro-v2
    spec:
      nodeSelector:
        "vke.vultr.com/node-pool": "main-node-pool"
      containers:
      - name: minbird-nokduro-v2
        image: hyeonwoo5342/minbird-nokduro-v2:2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '300Mi'
            cpu: '150m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 35
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
