apps/minbird-nokduro-v2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minbird-nokduro-v2-ingress
  namespace: haenu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
    # Nginx Sticky Session
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
spec:
  rules:
  - host: nokduro.haenu.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minbird-nokduro-v2
            port:
              number: 3000
